<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <GVL Name="WAAGEN" Id="{b3918417-cf86-461b-91bf-a9f8bbcc176a}">
    <Declaration><![CDATA[VAR_GLOBAL
	
(*Variablen für den Betrieb der Waagen unter dem Verdampfer in der Klimakammer.
 Die Waagen dienen zur Bestimmung von der Eismenge im Wärmetauscher des Verdampfers *)
 
 //Variablen Deklarirung von den Waagen. Siehe unter DUTs.
   		Waage_1 : 	WAAGE_VAR;
		Waage_2 : 	WAAGE_VAR;
		Waage_3 : 	WAAGE_VAR;
   		Waage_4 :	WAAGE_VAR;
   
//Zwischenspeicher für eingehende Werte von Waagen
		RxBuffer1   : ComBuffer;
		RxBuffer2   : ComBuffer;
		RxBuffer3   : ComBuffer;
		RxBuffer4   : ComBuffer;

//Zwischenspeicher für ausgehende Werte für Waagen
		TxBuffer1   : ComBuffer;
		TxBuffer2   : ComBuffer;
		TxBuffer3   : ComBuffer;
		TxBuffer4   : ComBuffer;

	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>