<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <POU Name="Hintergrund" Id="{a7d83ced-05c9-4483-8bd2-3478f81da11d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Hintergrund
VAR   
 (* background communication with the EL6002 terminal *)
    fbEL6002Ctrl_1       : SerialLineControl;
	fbEL6002Ctrl_2       : SerialLineControl;
	fbEL6002Ctrl_3       : SerialLineControl;
	fbEL6002Ctrl_4       : SerialLineControl;
		
	bEL6002CtrlError1: BOOL;
	bEL6002CtrlError2: BOOL;
	bEL6002CtrlError3: BOOL;
	bEL6002CtrlError4: BOOL;
	
	eEL6002CtrlErrorID1: ComError_t;
	eEL6002CtrlErrorID2: ComError_t;
	eEL6002CtrlErrorID3: ComError_t;
	eEL6002CtrlErrorID4: ComError_t;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbEL6002Ctrl_1(
   Mode:= 		SERIALLINEMODE_EL6_22B, 
   pComIn:= 	ADR(Waage_1.EL6002_in), 
   pComOut:= 	ADR(Waage_1.EL6002_out), 
   SizeComIn:=	SIZEOF(Waage_1.EL6002_in), 
   Error=> 		bEL6002CtrlError1, 
   ErrorID=> 	eEL6002CtrlErrorID1, 
   TxBuffer:= 	TxBuffer1, 
   RxBuffer:= 	RxBuffer1 );
   
fbEL6002Ctrl_2(
   Mode:= 		SERIALLINEMODE_EL6_22B, 
   pComIn:= 	ADR(Waage_2.EL6002_in), 
   pComOut:= 	ADR(Waage_2.EL6002_out), 
   SizeComIn:= 	SIZEOF(Waage_2.EL6002_in), 
   Error=> 		bEL6002CtrlError2, 
   ErrorID=> 	eEL6002CtrlErrorID2, 
   TxBuffer:= 	TxBuffer2, 
   RxBuffer:= 	RxBuffer2 );
   
fbEL6002Ctrl_3(
   Mode:= 		SERIALLINEMODE_EL6_22B, 
   pComIn:= 	ADR(Waage_3.EL6002_in), 
   pComOut:= 	ADR(Waage_3.EL6002_out), 
   SizeComIn:= 	SIZEOF(Waage_3.EL6002_in), 
   Error=> 		bEL6002CtrlError3, 
   ErrorID=> 	eEL6002CtrlErrorID3, 
   TxBuffer:= 	TxBuffer3, 
   RxBuffer:= 	RxBuffer3);
   
fbEL6002Ctrl_4(
   Mode:= 		SERIALLINEMODE_EL6_22B, 
   pComIn:= 	ADR(Waage_4.EL6002_in), 
   pComOut:= 	ADR(Waage_4.EL6002_out), 
   SizeComIn:= 	SIZEOF(Waage_4.EL6002_in), 
   Error=>		bEL6002CtrlError4, 
   ErrorID=> 	eEL6002CtrlErrorID4, 
   TxBuffer:= 	TxBuffer4, 
   RxBuffer:= 	RxBuffer4); ]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>